update website description

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="bitempura-viz 🔮"
+      content="Bitemporal database visualization. Bitemporality 101."
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
